# hospital_appointment

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  SYSTEM_DESIGN.md  pyproject.toml  requirements-dev.txt
backend/: auth.py  calendar_service.py  database.py  jobs.py  llm.py  main.py  models.py  requirements.txt  schemas.py
backend/routers/: admin.py  auth.py  calendar.py  doctor.py  patient.py
frontend/src/: App.jsx  index.css
